<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".UserInputPage"
        android:paddingHorizontal="5dp">

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@android:color/background_light" />

        <TextView
            android:id="@+id/text_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/text_date"
            android:textColor="#009688" />

        <TextView
            android:id="@+id/edit_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:textSize="18sp"
            android:focusable="true"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/edit_date" />

        <Button
            android:id="@+id/button_pick_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_pick_date" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@android:color/background_light" />

        <TextView
            android:id="@+id/text_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/text_des"
            android:textColor="#009688" />

        <EditText
            android:id="@+id/edit_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_des"
            android:inputType="textPersonName"
            android:textIsSelectable="true" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@android:color/background_light" />

        <TextView
            android:id="@+id/text_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/text_price"
            android:textColor="#009688" />

        <EditText
            android:id="@+id/edit_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_price"
            android:inputType="numberDecimal"
            android:textIsSelectable="true" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@android:color/background_light" />

        <TextView
            android:id="@+id/text_maker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/text_maker"
            android:textColor="#009688" />

        <EditText
            android:id="@+id/edit_maker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_maker"
            android:inputType="textPersonName"
            android:textIsSelectable="true" />

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@android:color/background_light" />

        <TextView
            android:id="@+id/text_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/text_comment"
            android:textColor="#009688" />

        <EditText
            android:id="@+id/edit_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_comment"
            android:inputType="textPersonName"
            android:textIsSelectable="true" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_ok" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel" />

    </LinearLayout>
</ScrollView>