<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_add" />

    <Button
        android:id="@+id/button_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_edit" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_delete" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="100sp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:text="@string/title_date"
            android:textColor="#009688" />

        <TextView
            android:id="@+id/title_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200sp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:text="@string/title_des"
            android:textColor="#009688" />

        <TextView
            android:id="@+id/title_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="100sp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:text="@string/title_price"
            android:textColor="#009688" />
    </TableRow>

    <ListView
        android:id="@+id/view_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>